.antlr/MyGrammarParser.java
// Generated from c:/Users/Jonithan James/Documents/Compilers-Project/MyGrammar.g4 by ANTLR 4.13.1

    import backend.*; 

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class MyGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, BOOLEAN=29, INTEGER=30, STRING=31, 
		SYMBOL=32, WORD=33, WHITESPACE=34;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_expression = 2, RULE_value = 3, 
		RULE_assignment = 4, RULE_funCall = 5, RULE_argDecl = 6, RULE_argList = 7, 
		RULE_body = 8;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statement", "expression", "value", "assignment", "funCall", 
			"argDecl", "argList", "body"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "'('", "')'", "'++'", "'+'", "'-'", "'*'", "'/'", "'>'", 
			"'>='", "'<'", "'<='", "'=='", "'!='", "'avg'", "'med'", "'let'", "'='", 
			"'function'", "'print'", "'for'", "'in'", "'..'", "'if'", "'else'", "','", 
			"'{'", "'}'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, "BOOLEAN", "INTEGER", "STRING", "SYMBOL", 
			"WORD", "WHITESPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MyGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }




	public MyGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public Expr expr;
		public StatementContext statement;
		public TerminalNode EOF() { return getToken(MyGrammarParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			 List<Expr> statements = new ArrayList<>(); 
			setState(24);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 11831836676L) != 0)) {
				{
				{
				setState(19);
				((ProgramContext)_localctx).statement = statement();
				 statements.add(((ProgramContext)_localctx).statement.expr); 
				}
				}
				setState(26);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(27);
			match(EOF);
			 ((ProgramContext)_localctx).expr =  new Block(statements); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public Expr expr;
		public ExpressionContext expression;
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(30);
			((StatementContext)_localctx).expression = expression(0);
			setState(32);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__0) {
				{
				setState(31);
				match(T__0);
				}
			}

			 ((StatementContext)_localctx).expr =  ((StatementContext)_localctx).expression.expr; 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpressionContext extends ParserRuleContext {
		public Expr expr;
		public ExpressionContext e1;
		public ExpressionContext expression;
		public ArgListContext argList;
		public AssignmentContext assignment;
		public FunCallContext funCall;
		public ValueContext value;
		public ExpressionContext e2;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public ArgListContext argList() {
			return getRuleContext(ArgListContext.class,0);
		}
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public FunCallContext funCall() {
			return getRuleContext(FunCallContext.class,0);
		}
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
	}

	public final ExpressionContext expression() throws RecognitionException {
		return expression(0);
	}

	private ExpressionContext expression(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExpressionContext _localctx = new ExpressionContext(_ctx, _parentState);
		ExpressionContext _prevctx = _localctx;
		int _startState = 4;
		enterRecursionRule(_localctx, 4, RULE_expression, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(37);
				match(T__1);
				setState(38);
				((ExpressionContext)_localctx).expression = expression(0);
				setState(39);
				match(T__2);
				 ((ExpressionContext)_localctx).expr =  ((ExpressionContext)_localctx).expression.expr; 
				}
				break;
			case 2:
				{
				setState(42);
				match(T__14);
				setState(43);
				match(T__1);
				setState(44);
				((ExpressionContext)_localctx).argList = argList();
				setState(45);
				match(T__2);
				 ((ExpressionContext)_localctx).expr =  new AvgFunction(((ExpressionContext)_localctx).argList.exprList); 
				}
				break;
			case 3:
				{
				setState(48);
				match(T__15);
				setState(49);
				match(T__1);
				setState(50);
				((ExpressionContext)_localctx).argList = argList();
				setState(51);
				match(T__2);
				 ((ExpressionContext)_localctx).expr =  new MedFunction(((ExpressionContext)_localctx).argList.exprList); 
				}
				break;
			case 4:
				{
				setState(54);
				((ExpressionContext)_localctx).assignment = assignment();
				 ((ExpressionContext)_localctx).expr =  ((ExpressionContext)_localctx).assignment.expr; 
				}
				break;
			case 5:
				{
				setState(57);
				((ExpressionContext)_localctx).funCall = funCall();
				 ((ExpressionContext)_localctx).expr =  ((ExpressionContext)_localctx).funCall.expr; 
				}
				break;
			case 6:
				{
				setState(60);
				((ExpressionContext)_localctx).value = value();
				 ((ExpressionContext)_localctx).expr =  ((ExpressionContext)_localctx).value.expr; 
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(122);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(120);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
					case 1:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						_localctx.e1 = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(65);
						if (!(precpred(_ctx, 16))) throw new FailedPredicateException(this, "precpred(_ctx, 16)");
						setState(66);
						match(T__3);
						setState(67);
						((ExpressionContext)_localctx).e2 = ((ExpressionContext)_localctx).expression = expression(17);
						 ((ExpressionContext)_localctx).expr =  new AddString(((ExpressionContext)_localctx).e1.expr,((ExpressionContext)_localctx).e2.expr); 
						}
						break;
					case 2:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						_localctx.e1 = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(70);
						if (!(precpred(_ctx, 15))) throw new FailedPredicateException(this, "precpred(_ctx, 15)");
						setState(71);
						match(T__4);
						setState(72);
						((ExpressionContext)_localctx).e2 = ((ExpressionContext)_localctx).expression = expression(16);
						 ((ExpressionContext)_localctx).expr =  new Arithmetics(Operator.Add, ((ExpressionContext)_localctx).e1.expr,((ExpressionContext)_localctx).e2.expr); 
						}
						break;
					case 3:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						_localctx.e1 = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(75);
						if (!(precpred(_ctx, 14))) throw new FailedPredicateException(this, "precpred(_ctx, 14)");
						setState(76);
						match(T__5);
						setState(77);
						((ExpressionContext)_localctx).e2 = ((ExpressionContext)_localctx).expression = expression(15);
						 ((ExpressionContext)_localctx).expr =  new Arithmetics(Operator.Sub, ((ExpressionContext)_localctx).e1.expr,((ExpressionContext)_localctx).e2.expr); 
						}
						break;
					case 4:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						_localctx.e1 = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(80);
						if (!(precpred(_ctx, 13))) throw new FailedPredicateException(this, "precpred(_ctx, 13)");
						setState(81);
						match(T__6);
						setState(82);
						((ExpressionContext)_localctx).e2 = ((ExpressionContext)_localctx).expression = expression(14);
						 ((ExpressionContext)_localctx).expr =  new Arithmetics(Operator.Mul, ((ExpressionContext)_localctx).e1.expr,((ExpressionContext)_localctx).e2.expr); 
						}
						break;
					case 5:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						_localctx.e1 = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(85);
						if (!(precpred(_ctx, 12))) throw new FailedPredicateException(this, "precpred(_ctx, 12)");
						setState(86);
						match(T__7);
						setState(87);
						((ExpressionContext)_localctx).e2 = ((ExpressionContext)_localctx).expression = expression(13);
						 ((ExpressionContext)_localctx).expr =  new Arithmetics(Operator.Div, ((ExpressionContext)_localctx).e1.expr,((ExpressionContext)_localctx).e2.expr); 
						}
						break;
					case 6:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						_localctx.e1 = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(90);
						if (!(precpred(_ctx, 11))) throw new FailedPredicateException(this, "precpred(_ctx, 11)");
						setState(91);
						match(T__8);
						setState(92);
						((ExpressionContext)_localctx).e2 = ((ExpressionContext)_localctx).expression = expression(12);
						 ((ExpressionContext)_localctx).expr =  new Compare(Comparator.GT, ((ExpressionContext)_localctx).e1.expr,((ExpressionContext)_localctx).e2.expr); 
						}
						break;
					case 7:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						_localctx.e1 = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(95);
						if (!(precpred(_ctx, 10))) throw new FailedPredicateException(this, "precpred(_ctx, 10)");
						setState(96);
						match(T__9);
						setState(97);
						((ExpressionContext)_localctx).e2 = ((ExpressionContext)_localctx).expression = expression(11);
						 ((ExpressionContext)_localctx).expr =  new Compare(Comparator.GE, ((ExpressionContext)_localctx).e1.expr,((ExpressionContext)_localctx).e2.expr); 
						}
						break;
					case 8:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						_localctx.e1 = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(100);
						if (!(precpred(_ctx, 9))) throw new FailedPredicateException(this, "precpred(_ctx, 9)");
						setState(101);
						match(T__10);
						setState(102);
						((ExpressionContext)_localctx).e2 = ((ExpressionContext)_localctx).expression = expression(10);
						 ((ExpressionContext)_localctx).expr =  new Compare(Comparator.LT, ((ExpressionContext)_localctx).e1.expr,((ExpressionContext)_localctx).e2.expr); 
						}
						break;
					case 9:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						_localctx.e1 = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(105);
						if (!(precpred(_ctx, 8))) throw new FailedPredicateException(this, "precpred(_ctx, 8)");
						setState(106);
						match(T__11);
						setState(107);
						((ExpressionContext)_localctx).e2 = ((ExpressionContext)_localctx).expression = expression(9);
						 ((ExpressionContext)_localctx).expr =  new Compare(Comparator.LE, ((ExpressionContext)_localctx).e1.expr,((ExpressionContext)_localctx).e2.expr); 
						}
						break;
					case 10:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						_localctx.e1 = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(110);
						if (!(precpred(_ctx, 7))) throw new FailedPredicateException(this, "precpred(_ctx, 7)");
						setState(111);
						match(T__12);
						setState(112);
						((ExpressionContext)_localctx).e2 = ((ExpressionContext)_localctx).expression = expression(8);
						 ((ExpressionContext)_localctx).expr =  new Compare(Comparator.EQ, ((ExpressionContext)_localctx).e1.expr,((ExpressionContext)_localctx).e2.expr); 
						}
						break;
					case 11:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						_localctx.e1 = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(115);
						if (!(precpred(_ctx, 6))) throw new FailedPredicateException(this, "precpred(_ctx, 6)");
						setState(116);
						match(T__13);
						setState(117);
						((ExpressionContext)_localctx).e2 = ((ExpressionContext)_localctx).expression = expression(7);
						 ((ExpressionContext)_localctx).expr =  new Compare(Comparator.NE, ((ExpressionContext)_localctx).e1.expr,((ExpressionContext)_localctx).e2.expr); 
						}
						break;
					}
					} 
				}
				setState(124);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ValueContext extends ParserRuleContext {
		public Expr expr;
		public Token INTEGER;
		public Token STRING;
		public Token WORD;
		public TerminalNode INTEGER() { return getToken(MyGrammarParser.INTEGER, 0); }
		public TerminalNode STRING() { return getToken(MyGrammarParser.STRING, 0); }
		public TerminalNode WORD() { return getToken(MyGrammarParser.WORD, 0); }
		public ValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_value; }
	}

	public final ValueContext value() throws RecognitionException {
		ValueContext _localctx = new ValueContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_value);
		try {
			setState(131);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INTEGER:
				enterOuterAlt(_localctx, 1);
				{
				setState(125);
				((ValueContext)_localctx).INTEGER = match(INTEGER);
				 ((ValueContext)_localctx).expr =  new IntLiteral((((ValueContext)_localctx).INTEGER!=null?((ValueContext)_localctx).INTEGER.getText():null)); 
				}
				break;
			case STRING:
				enterOuterAlt(_localctx, 2);
				{
				setState(127);
				((ValueContext)_localctx).STRING = match(STRING);
				 ((ValueContext)_localctx).expr =  new StringLiteral((((ValueContext)_localctx).STRING!=null?((ValueContext)_localctx).STRING.getText():null)); 
				}
				break;
			case WORD:
				enterOuterAlt(_localctx, 3);
				{
				setState(129);
				((ValueContext)_localctx).WORD = match(WORD);
				 ((ValueContext)_localctx).expr =  new Deref((((ValueContext)_localctx).WORD!=null?((ValueContext)_localctx).WORD.getText():null)); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssignmentContext extends ParserRuleContext {
		public Expr expr;
		public Token WORD;
		public ExpressionContext expression;
		public ArgDeclContext argDecl;
		public BodyContext body;
		public TerminalNode WORD() { return getToken(MyGrammarParser.WORD, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ArgDeclContext argDecl() {
			return getRuleContext(ArgDeclContext.class,0);
		}
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_assignment);
		int _la;
		try {
			setState(149);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__16:
			case WORD:
				enterOuterAlt(_localctx, 1);
				{
				setState(134);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__16) {
					{
					setState(133);
					match(T__16);
					}
				}

				setState(136);
				((AssignmentContext)_localctx).WORD = match(WORD);
				setState(137);
				match(T__17);
				setState(138);
				((AssignmentContext)_localctx).expression = expression(0);
				 ((AssignmentContext)_localctx).expr =  new Assign((((AssignmentContext)_localctx).WORD!=null?((AssignmentContext)_localctx).WORD.getText():null), ((AssignmentContext)_localctx).expression.expr); 
				}
				break;
			case T__18:
				enterOuterAlt(_localctx, 2);
				{
				setState(141);
				match(T__18);
				setState(142);
				((AssignmentContext)_localctx).WORD = match(WORD);
				setState(143);
				match(T__1);
				setState(144);
				((AssignmentContext)_localctx).argDecl = argDecl();
				setState(145);
				match(T__2);
				setState(146);
				((AssignmentContext)_localctx).body = body();
				 ((AssignmentContext)_localctx).expr =  new Declare((((AssignmentContext)_localctx).WORD!=null?((AssignmentContext)_localctx).WORD.getText():null), ((AssignmentContext)_localctx).argDecl.strList, (Block) ((AssignmentContext)_localctx).body.expr); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunCallContext extends ParserRuleContext {
		public Expr expr;
		public ExpressionContext expression;
		public ValueContext i;
		public ValueContext a;
		public ValueContext z;
		public BodyContext body;
		public BodyContext b1;
		public BodyContext b2;
		public Token WORD;
		public ArgListContext argList;
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public List<BodyContext> body() {
			return getRuleContexts(BodyContext.class);
		}
		public BodyContext body(int i) {
			return getRuleContext(BodyContext.class,i);
		}
		public List<ValueContext> value() {
			return getRuleContexts(ValueContext.class);
		}
		public ValueContext value(int i) {
			return getRuleContext(ValueContext.class,i);
		}
		public TerminalNode WORD() { return getToken(MyGrammarParser.WORD, 0); }
		public ArgListContext argList() {
			return getRuleContext(ArgListContext.class,0);
		}
		public FunCallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funCall; }
	}

	public final FunCallContext funCall() throws RecognitionException {
		FunCallContext _localctx = new FunCallContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_funCall);
		try {
			setState(183);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__19:
				enterOuterAlt(_localctx, 1);
				{
				setState(151);
				match(T__19);
				setState(152);
				match(T__1);
				setState(153);
				((FunCallContext)_localctx).expression = expression(0);
				setState(154);
				match(T__2);
				 ((FunCallContext)_localctx).expr =  new PrintExpr(((FunCallContext)_localctx).expression.expr); 
				}
				break;
			case T__20:
				enterOuterAlt(_localctx, 2);
				{
				setState(157);
				match(T__20);
				setState(158);
				match(T__1);
				setState(159);
				((FunCallContext)_localctx).i = value();
				setState(160);
				match(T__21);
				setState(161);
				((FunCallContext)_localctx).a = value();
				setState(162);
				match(T__22);
				setState(163);
				((FunCallContext)_localctx).z = value();
				setState(164);
				match(T__2);
				setState(165);
				((FunCallContext)_localctx).body = body();
				 ((FunCallContext)_localctx).expr =  new ForLoop((((FunCallContext)_localctx).i!=null?_input.getText(((FunCallContext)_localctx).i.start,((FunCallContext)_localctx).i.stop):null), ((FunCallContext)_localctx).a.expr, ((FunCallContext)_localctx).z.expr, (Block) ((FunCallContext)_localctx).body.expr); 
				}
				break;
			case T__23:
				enterOuterAlt(_localctx, 3);
				{
				setState(168);
				match(T__23);
				setState(169);
				match(T__1);
				setState(170);
				((FunCallContext)_localctx).expression = expression(0);
				setState(171);
				match(T__2);
				setState(172);
				((FunCallContext)_localctx).b1 = body();
				setState(173);
				match(T__24);
				setState(174);
				((FunCallContext)_localctx).b2 = body();
				 ((FunCallContext)_localctx).expr =  new IfElse(((FunCallContext)_localctx).expression.expr, ((FunCallContext)_localctx).b1.expr, ((FunCallContext)_localctx).b2.expr); 
				}
				break;
			case WORD:
				enterOuterAlt(_localctx, 4);
				{
				setState(177);
				((FunCallContext)_localctx).WORD = match(WORD);
				setState(178);
				match(T__1);
				setState(179);
				((FunCallContext)_localctx).argList = argList();
				setState(180);
				match(T__2);
				 ((FunCallContext)_localctx).expr =  new Invoke((((FunCallContext)_localctx).WORD!=null?((FunCallContext)_localctx).WORD.getText():null), ((FunCallContext)_localctx).argList.exprList); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ArgDeclContext extends ParserRuleContext {
		public List<String> strList;
		public Token WORD;
		public List<TerminalNode> WORD() { return getTokens(MyGrammarParser.WORD); }
		public TerminalNode WORD(int i) {
			return getToken(MyGrammarParser.WORD, i);
		}
		public ArgDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argDecl; }
	}

	public final ArgDeclContext argDecl() throws RecognitionException {
		ArgDeclContext _localctx = new ArgDeclContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_argDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			 ((ArgDeclContext)_localctx).strList =  new ArrayList<>(); 
			setState(196);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WORD) {
				{
				setState(186);
				((ArgDeclContext)_localctx).WORD = match(WORD);
				_localctx.strList.add((((ArgDeclContext)_localctx).WORD!=null?((ArgDeclContext)_localctx).WORD.getText():null));
				setState(193);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__25) {
					{
					{
					setState(188);
					match(T__25);
					setState(189);
					((ArgDeclContext)_localctx).WORD = match(WORD);
					_localctx.strList.add((((ArgDeclContext)_localctx).WORD!=null?((ArgDeclContext)_localctx).WORD.getText():null));
					}
					}
					setState(195);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ArgListContext extends ParserRuleContext {
		public List<Expr> exprList;
		public ExpressionContext expression;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public ArgListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argList; }
	}
